--- a/starter-files/package.json
+++ b/starter-files/package.json
@@ -28,6 +28,7 @@
     "express-session": "1.15.1",
     "express-validator": "3.1.2",
     "faker": "4.1.0",
+    "firebase": "^8.2.1",
     "forever": "0.15.3",
     "glob": "7.1.1",
     "html-to-text": "3.2.0",
